added router and links in navbar

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-
 <!DOCTYPE html>
 
 <html>
 <head>
 
     <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/service_manager.css" rel="stylesheet">
     <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
+
 
 
 </head>
@@ -13,7 +14,7 @@
 
 <div id="mount-point"></div>
 <script type="text/javascript" src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script  src="/compiled/jobs_compiled.js" > </script>
+<script  src="/compiled/index_compiled.js" > </script>
 
 </body>
 </html>
